--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <!--
 
         a.flag {font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url('http://www.heliocal.gr/modules/mod_gtranslate/tmpl/lang/16a.png');}
-        a.flag:hover {background-image:url('http://www.heliocal.gr/modules/mod_gtranslate/tmpl/lang/16.png');}
+        a.flag:hover {background-image:url('modules/mod_gtranslate/tmpl/lang/16.png');}
         a.flag img {border:0;}
         a.alt_flag {font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url('http://www.heliocal.gr/modules/mod_gtranslate/tmpl/lang/alt_flagsa.png');}
-        a.alt_flag:hover {background-image:url('http://www.heliocal.gr/modules/mod_gtranslate/tmpl/lang/alt_flags.png');}
+        a.alt_flag:hover {background-image:url('modules/mod_gtranslate/tmpl/lang/alt_flags.png');}
         a.alt_flag img {border:0;}
     
     -->
   </style>
-  <script type="text/javascript" src="http://www.heliocal.gr/media/system/js/mootools.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/media/system/js/caption.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/media/system/js/modal.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/plugins/content/attachments_refresh.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/components/com_imageshow/assets/js/swfobject.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/components/com_imageshow/assets/js/jsn_is_extultils.js"></script>
-  <script type="text/javascript" src="http://www.heliocal.gr/components/com_imageshow/assets/js/jsn_is_imageshow.js"></script>
+  <script type="text/javascript" src="media/system/js/mootools.js"></script>
+  <script type="text/javascript" src="media/system/js/caption.js"></script>
+  <script type="text/javascript" src="media/system/js/modal.js"></script>
+  <script type="text/javascript" src="plugins/content/attachments_refresh.js"></script>
+  <script type="text/javascript" src="components/com_imageshow/assets/js/swfobject.js"></script>
+  <script type="text/javascript" src="components/com_imageshow/assets/js/jsn_is_extultils.js"></script>
+  <script type="text/javascript" src="components/com_imageshow/assets/js/jsn_is_imageshow.js"></script>
   <script type="text/javascript">
 
 		window.addEvent('domready', function() {
@@ -51,15 +51,15 @@
 			
   </script>
 
- <link rel="stylesheet" href="http://www.heliocal.gr/templates/system/css/system.css" type="text/css" />
- <link rel="stylesheet" href="http://www.heliocal.gr/templates/system/css/general.css" type="text/css" />
- <link rel="stylesheet" type="text/css" href="http://www.heliocal.gr/templates/untitled_new_3/css/template.css" media="screen" />
+ <link rel="stylesheet" href="templates/system/css/system.css" type="text/css" />
+ <link rel="stylesheet" href="templates/system/css/general.css" type="text/css" />
+ <link rel="stylesheet" type="text/css" href="templates/untitled_new_3/css/template.css" media="screen" />
  <!--[if IE 6]><link rel="stylesheet" href="/templates/untitled_new_3/css/template.ie6.css" type="text/css" media="screen" /><![endif]-->
  <!--[if IE 7]><link rel="stylesheet" href="/templates/untitled_new_3/css/template.ie7.css" type="text/css" media="screen" /><![endif]-->
  <script type="text/javascript">if ('undefined' != typeof jQuery) document._artxJQueryBackup = jQuery;</script>
- <script type="text/javascript" src="http://www.heliocal.gr/templates/untitled_new_3/jquery.js"></script>
+ <script type="text/javascript" src="templates/untitled_new_3/jquery.js"></script>
  <script type="text/javascript">jQuery.noConflict();</script>
- <script type="text/javascript" src="http://www.heliocal.gr/templates/untitled_new_3/script.js"></script>
+ <script type="text/javascript" src="templates/untitled_new_3/script.js"></script>
  <script type="text/javascript">if (document._artxJQueryBackup) jQuery = document._artxJQueryBackup;</script>
 </head>
 <body class="art-j15">
