--- a/indexdd15.html
+++ b/indexdd15.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="el-gr" lang="el-gr" >
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="robots" content="index, follow" />
@@ -138,7 +138,8 @@
 <h4>
 	•&nbsp;&nbsp; &nbsp;Boiler ηλιακού 120 λίτρα διπλής ενέργειας<br />
 	•&nbsp;&nbsp; &nbsp;Boiler ηλιακού 160 λίτρα διπλής ενέργειας<br />
-	•&nbsp;&nbsp; &nbsp;Boiler ηλιακού 200 λίτρα διπλής ενέργειας</h4>
+	•&nbsp;&nbsp; &nbsp;Boiler ηλιακού 200 λίτρα διπλής ενέργειας<br />
+	•&nbsp;&nbsp; &nbsp;Boiler ηλιακού 300 λίτρα διπλής ενέργειας</h4>
 <h4>
 	<u><strong>Επιπλέον εφαρμογές:</strong></u><br />
 	• ηλιακοί τριπλής ενεργείας<br />
