--- a/index4c05.html
+++ b/index4c05.html
@@ -142,14 +142,14 @@
 <h4 style="text-align: justify">
 	<strong><u>ΣΥΛΛΕΚΤΕΣ S <!--T.TINOX--></u></strong></h4>
 <h4 style="text-align: justify">
-	1.τζάμι ασφαλείας, άθραυστο πάχους 4 χιλιοστών, υψηλής διαπερατότητας και ταυτόχρονα εμποδίζει την αντανάκλαση επιτρέποντας την μέγιστη απορρόφηση της ακτινοβολίας, με αντοχή στο χαλάζι<br />
-	2.επιλεκτική επιφάνεια δηλαδή επίστρωση τιτανίου ( Tinox ) χρώματος μπλέ προσφέρει άμεση και έμμεση απορρόφηση της ακτινοβολίας και απόδοση μεγαλύτερη κατά 15% με 30% από τους κοινούς συλλέκτες ακόμη και σε περιόδους μικρής ηλιοφάνειας<br />
-	3.υδροσκελετός εξολοκλήρου από εκτονωμένο χαλκό<br />
-	4.πλαίσιο ανοδιομένου αλουμινίου μονοκόμματο βαμμένο άσπρο<br />
-	5.η μόνωση των συλλεκτών είναι οπίσθια πετροβάμβακα αλλά και πλευρική υαλοβάμβακα ώστε να επιτυγχάνεται η μέγιστη απόδοση χωρίς θερμικές απώλειες<br />
-	6.πάτος από λαμαρίνα γαλβανιζέ<br />
-	7.διαθέτουν εξαερισμούς και στους συλλέκτες για να αποφεύγονται οι υδρατμοί οι οποίοι δημιουργούν διάβρωση<br />
-	8.ειδικά λάστιχα για στεγανοποίηση</h4>
+	1. τζάμι ασφαλείας, άθραυστο πάχους 4 χιλιοστών, υψηλής διαπερατότητας και ταυτόχρονα εμποδίζει την αντανάκλαση επιτρέποντας την μέγιστη απορρόφηση της ακτινοβολίας, με αντοχή στο χαλάζι<br />
+	2. επιλεκτική επιφάνεια δηλαδή επίστρωση τιτανίου χρώματος μπλέ προσφέρει άμεση και έμμεση απορρόφηση της ακτινοβολίας και απόδοση μεγαλύτερη κατά 15% με 30% από τους κοινούς συλλέκτες ακόμη και σε περιόδους μικρής ηλιοφάνειας<br />
+	3. υδροσκελετός εξ ολοκλήρου από εκτονωμένο χαλκό<br />
+	4. πλαίσιο ανοδιομένου αλουμινίου μονοκόμματο<br />
+	5. η μόνωση των συλλεκτών είναι οπίσθια πετροβάμβακα αλλά και πλευρική υαλοβάμβακα ώστε να επιτυγχάνεται η μέγιστη απόδοση χωρίς θερμικές απώλειες<br />
+	6. πάτος από λαμαρίνα γαλβανιζέ<br />
+	7. διαθέτουν εξαερισμούς και στους συλλέκτες για να αποφεύγονται οι υδρατμοί οι οποίοι δημιουργούν διάβρωση<br />
+	8. ειδικά λάστιχα για στεγανοποίηση</h4>
 <h4>
 	•&nbsp;&nbsp; &nbsp;Συλλέκτες 1,50 τ.μ. ποιότητας S<br />
 	•&nbsp;&nbsp; &nbsp;Συλλέκτες 2,00 τ.μ. ποιότητας S<br />
